# arad_shortcut_remover

./: Cargo.toml  README.md  build.bat
src/: lib.rs
