[package]
name = "arad_shortcut_remover"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
dirs = "6.0.0"

[dependencies.windows]
version = "0.*"
features = [
  "Win32_Foundation",
  "Win32_System_SystemServices",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_System_Console"
]
